[package]
name = "kast"
description = "App launcher for linux"
version = "1.2.0"
edition = "2024"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
license = "MIT"
repository = "https://github.com/simon-danielsson/kast-launcher"
keywords = ["scripting", "manager", "file", "browser", "launcher", "productivity", "linux", "i3"]
exclude = ["media/"]
readme = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
winit = { version = "0.30.12", features = ["x11"] }
serde = {version = "1", features = ["derive"]}
toml = "0.9.10"
home = "0.5.12"

